syntax = "proto3";
package company;

option java_package = "com.company.unmanaged.order.proto";
option java_outer_classname = "IntraOrder";
option java_multiple_files = true;

message Order {
  int32 order_id = 1;
  string order_number = 2;
  .company.Order.CustomerAccount customer_account = 3;

  message CustomerAccount {
    .company.Order.CustomerAccount.BillingParty billing_party = 1;

    message BillingParty {
      string party_id = 1;
      .company.Order.Address address = 2;
    }
  }
  message Address {
    string address_line_one = 1;
    string address_line_two = 2;
  }
}