syntax = "proto3";

package tutorial;

option java_multiple_files = true;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";


message Person {
  map<string, string> name = 1;
  map<string, .tutorial.Person.Address> addresses = 2;
  map<string, Address> addressesNoDot = 3;

  message Address{
    optional string street = 1;
    optional int32 number = 2;
    optional int32 zipcode = 3;
  }
}

